--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 #header nav {
-	background: #00d2d3 !important;
+  background: #00d2d3 !important;
 }
 body {
-	background: #dfe6e9;
-	font-family: "Roboto", sans-serif;
+  background: #dfe6e9;
+  font-family: "Roboto", sans-serif;
 }
 #cardInput {
-	margin: 16px auto !important;
+  margin: 16px auto !important;
 }
 #cardInput .card {
-	border-radius: 15px;
+  border-radius: 15px;
 }
 #showGraph {
-	display: block;
+  display: none;
 }
 #preloader {
-	display: block;
+  display: none;
 }
